# parallel_python_course

./: .buildinfo  00_intro.html  01_joblib.html  02_xarray_zarr.html  03_dask_and_zarr.html  04_numba.html  05_cffi.html  06_pybind11.html  Readme.rst  austin.md  conda_packages.txt  genindex.html  index.html  objects.inv  search.html  searchindex.js  temp.html
.doctrees/: 00_intro.doctree  01_joblib.doctree  02_dask_and_zarr.doctree  02_xarray_zarr.doctree  03_dask_and_zarr.doctree  03_numba.doctree  03_xarray_zarr.doctree  04_cffi.doctree  04_numba.doctree  05_cffi.doctree  05_pybind11.doctree  06_pybind11.doctree  dask_2d_subset.doctree  environment.pickle  index.doctree  intro.doctree  temp.doctree  xarray_buoyancy.doctree
.doctrees/hold/: dask_2d_subset.doctree  intro.doctree  xarray_buoyancy.doctree
_sources/: 03_dask_and_zarr.ipynb.txt  04_numba.ipynb.txt  05_cffi.ipynb.txt  index.rst.txt  temp.md.txt
_sources/hold/: dask_2d_subset.ipynb.txt  xarray_buoyancy.ipynb.txt
_static/: documentation_options.js
code_examples/cffi_funs/: CMakeLists.txt  Readme_cffi_funs.rst
code_examples/cffi_funs/cffi_headers/: c_lib.h
code_examples/cffi_funs/recipe/: build.sh  meta.yaml
code_examples/cffi_funs/src/: c_lib.cpp
code_examples/cffi_practice/: Readme_cffi_practice.rst  setup.py
code_examples/cffi_practice/cffi_practice/: __init__.py
code_examples/cffi_practice/recipe/: bld.bat  build.sh  meta.yaml
code_examples/cffi_unique/: setup.py
code_examples/cffi_unique/include/make_unique_headers/: make_unique.h
code_examples/cffi_unique/make_unique/: _version.py
code_examples/cffi_unique/recipe/: build.sh  meta.yaml
code_examples/cffi_unique/src/: main_unique.cpp
code_examples/pybind11_demo/: CMakeLists.txt  setup.py  test_wait.py
code_examples/pybind11_demo/recipe/: build.sh  meta.yaml
code_examples/pybind11_demo/recipe/conda.recipe/: meta.yaml
code_examples/pybind11_demo/src/: main.cpp
code_examples/pybind11_demo/src/testthread/: doit.sh  test_timer.cpp  testit  threading.cpp  wall_clock  wall_clock.cpp
code_examples/pybind11_unique/: CMakeLists.txt  Readme.rst  setup.py
code_examples/pybind11_unique/conda.recipe/: meta.yaml  run_test.py
code_examples/pybind11_unique/make_unique/: __init__.py  test_numba.py
code_examples/pybind11_unique/make_unique_headers/: make_unique.h
code_examples/pybind11_unique/src/: main.cpp  make_unique.cpp
code_examples/pybind11_unique/tests/: __init__.py  test_numba.py  test_pha.py
conda_scripts/: Readme_conda.md
hold/: dask_2d_subset.html  intro.html  xarray_buoyancy.html
joblib/: joblib_demo.ipynb  zarr_job.py
mpitesting/: Readme_mpi.org  hostfile_rail.txt
notebooks/: 00_intro.ipynb  00_intro.rst  01_joblib.ipynb  01_numba.ipynb  02_joblib.ipynb  02_xarray_zarr.ipynb  03_dask_and_zarr.ipynb  03_numba.ipynb  04_cffi.ipynb  05-pybind11.ipynb  05_cffi.ipynb  06_pybind11.ipynb  conf.py  context.py  doit.sh  joblib_demo.ipynb  numba.ipynb  rsync.sh  test_zarr.ipynb  zarr.ipynb  zarr_threaded.ipynb
notebooks/python/: 00_intro.py  01_joblib.py  01_numba.py  02_joblib.py  02_xarray_zarr.py  03_dask_and_zarr.py  04_cffi.py  04_numba.py  05_cffi.py  05_pybind11.py  06_pybind11.py
notebooks/westgrid/: data_read.py
notebooks/westgrid/cffi_practice/: __init__.py
notebooks/zarr_dir/PP/: .zattrs  0.0.0.0  1.0.0.0  2.0.0.0  3.0.0.0  4.0.0.0  5.0.0.0  6.0.0.0  7.0.0.0  8.0.0.0  9.0.0.0
notebooks/zarr_dir/QV/: .zattrs  7.0.0.0
notebooks/zarr_dir/TABS/: .zarray  .zattrs  0.0.0.0  1.0.0.0  2.0.0.0  3.0.0.0  4.0.0.0  5.0.0.0  6.0.0.0  7.0.0.0  8.0.0.0  9.0.0.0
notebooks/zarr_dir/U/: .zattrs  0.0.0.0  1.0.0.0  2.0.0.0  3.0.0.0  4.0.0.0  5.0.0.0  6.0.0.0  7.0.0.0  8.0.0.0  9.0.0.0
notebooks/zarr_dir/V/: .zattrs  0.0.0.0  1.0.0.0  2.0.0.0  3.0.0.0  4.0.0.0  5.0.0.0  6.0.0.0  7.0.0.0  8.0.0.0  9.0.0.0
notebooks/zarr_dir/W/: .zattrs  0.0.0.0  1.0.0.0  2.0.0.0  3.0.0.0  4.0.0.0  5.0.0.0  6.0.0.0  7.0.0.0  8.0.0.0  9.0.0.0
notebooks/zarr_dir/p/: .zarray  .zattrs  0.0  1.0  2.0  3.0  5.0  6.0  7.0  8.0  9.0
notebooks/zarr_dir/time/: .zarray  .zattrs  0
notebooks/zarr_dir/x/: .zarray  .zattrs  0
notebooks/zarr_dir/y/: .zarray  .zattrs  0
notebooks/zarr_dir/z/: .zarray  .zattrs  0
trio/: trio_spawn_comm_mpi.py
